Fix too much call API

--- a/src/assets/css/map.css
+++ b/src/assets/css/map.css
@@ -2,7 +2,7 @@
     border-radius: 50%;
     position: relative;
     background: #4286f4;
-    padding: 10px;
+    padding: 10px 5px 10px 5px;
     color:white;
     font-size: 12px;
 }
